--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,11 @@
 			<artifactId>spark-core</artifactId>
 			<version>2.0.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.google.inject</groupId>
+			<artifactId>guice</artifactId>
+			<version>3.0</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.hamcrest</groupId>
@@ -43,6 +48,19 @@
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-all</artifactId>
 			<version>${mockito.version}</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>info.cukes</groupId>
+			<artifactId>cucumber-guice</artifactId>
+			<version>1.1.5</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>info.cukes</groupId>
+			<artifactId>cucumber-junit</artifactId>
+			<version>1.1.5</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
@@ -64,10 +82,10 @@
 		</resources>
 		<testResources>
 			<testResource>
-				<directory>src/core_test/resources</directory>
+				<directory>src/test/resources</directory>
 			</testResource>
 			<testResource>
-				<directory>src/test/resources</directory>
+				<directory>src/core_test/resources</directory>
 			</testResource>
 		</testResources>
 		<testSourceDirectory>src/test/java</testSourceDirectory>
@@ -112,6 +130,7 @@
 							<includes>
 								<include>**/*Spec.scala</include>
 								<include>**/*Should.*</include>
+								<include>**/*Test.*</include>
 							</includes>
 						</configuration>
 					</execution>
